--- a/DI-App/Controllers/login/Login.xib
+++ b/DI-App/Controllers/login/Login.xib
@@ -43,32 +43,36 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember me ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLs-TR-hhm">
-                    <rect key="frame" x="53" y="463" width="162" height="28"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Remember me ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLs-TR-hhm">
+                    <rect key="frame" x="45" y="487" width="117" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhp-op-0lo">
-                    <rect key="frame" x="45" y="569" width="285" height="64"/>
-                    <color key="backgroundColor" red="0.0" green="0.1734688714" blue="0.69387548580000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhp-op-0lo">
+                    <rect key="frame" x="45" y="599" width="285" height="34"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="285" id="rRU-Tp-fvc"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="43"/>
                     <color key="tintColor" red="0.0" green="0.1734688714" blue="0.69387548580000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <state key="normal" title="SIGN-IN">
-                        <color key="titleColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="SUBMIT">
+                        <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="SignIN:" destination="-1" eventType="touchUpInside" id="xbP-lK-LsC"/>
                     </connections>
                 </button>
                 <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FzO-7I-syL">
-                    <rect key="frame" x="16" y="465" width="25" height="25"/>
+                    <rect key="frame" x="16" y="502" width="17" height="16"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="25" id="6in-DA-UzC"/>
-                        <constraint firstAttribute="height" constant="25" id="Ibg-aU-rww"/>
+                        <constraint firstAttribute="width" constant="17" id="6in-DA-UzC"/>
+                        <constraint firstAttribute="height" constant="16" id="Ibg-aU-rww"/>
                     </constraints>
                     <state key="selected" image="checked-checkbox"/>
                     <connections>
@@ -76,7 +80,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mYL-BC-8ha">
-                    <rect key="frame" x="321" y="464" width="38" height="38"/>
+                    <rect key="frame" x="321" y="501" width="38" height="38"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="38" id="4FZ-Oi-0yL"/>
                         <constraint firstAttribute="width" constant="38" id="5Tf-lt-QKa"/>
@@ -89,11 +93,12 @@
                     </connections>
                 </button>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MY8-4U-isZ">
-                    <rect key="frame" x="0.0" y="206" width="375" height="244"/>
+                    <rect key="frame" x="0.0" y="206" width="375" height="281"/>
+                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </scrollView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WbC-nW-4CJ" customClass="CustomSegmentedControl" customModule="DI_App">
                     <rect key="frame" x="39" y="145" width="296" height="30"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                             <color key="value" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -107,25 +112,31 @@
                         <action selector="textFieldAppearing" destination="-1" eventType="valueChanged" id="4Zj-7W-3Ws"/>
                     </connections>
                 </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="GbL-Gy-mfR">
+                    <rect key="frame" x="124" y="9" width="124" height="112"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="tintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="FzO-7I-syL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="1bi-EF-2gI"/>
                 <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="12" id="62w-lR-gW5"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="mYL-BC-8ha" secondAttribute="trailing" constant="16" id="8T4-77-x2e"/>
                 <constraint firstItem="WbC-nW-4CJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="125" id="AyF-iX-D9M"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="WbC-nW-4CJ" secondAttribute="trailing" constant="40" id="FKB-4z-tcg"/>
-                <constraint firstItem="Zhp-op-0lo" firstAttribute="top" secondItem="RLs-TR-hhm" secondAttribute="bottom" constant="78" id="IE0-Nb-poH"/>
+                <constraint firstItem="Zhp-op-0lo" firstAttribute="top" secondItem="RLs-TR-hhm" secondAttribute="bottom" constant="79" id="IE0-Nb-poH"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="MY8-4U-isZ" secondAttribute="trailing" id="PVL-hR-v3n"/>
                 <constraint firstItem="Zhp-op-0lo" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="45" id="Pca-dx-E9M"/>
-                <constraint firstItem="mYL-BC-8ha" firstAttribute="leading" secondItem="RLs-TR-hhm" secondAttribute="trailing" constant="106" id="XqR-Oy-XqD"/>
+                <constraint firstItem="mYL-BC-8ha" firstAttribute="leading" secondItem="RLs-TR-hhm" secondAttribute="trailing" constant="159" id="XqR-Oy-XqD"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Zhp-op-0lo" secondAttribute="trailing" constant="45" id="aJ6-tf-aSS"/>
-                <constraint firstItem="RLs-TR-hhm" firstAttribute="top" secondItem="MY8-4U-isZ" secondAttribute="bottom" constant="13" id="ado-D5-Kgw"/>
                 <constraint firstItem="RLs-TR-hhm" firstAttribute="leading" secondItem="FzO-7I-syL" secondAttribute="trailing" constant="12" id="bKc-cG-vF2"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Zhp-op-0lo" secondAttribute="bottom" constant="34" id="bzP-Fx-aia"/>
                 <constraint firstItem="mYL-BC-8ha" firstAttribute="top" secondItem="MY8-4U-isZ" secondAttribute="bottom" constant="14" id="dzt-tz-PKQ"/>
                 <constraint firstItem="MY8-4U-isZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="h4T-xc-6Wx"/>
                 <constraint firstItem="WbC-nW-4CJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="39" id="iO5-ks-Gar"/>
+                <constraint firstItem="RLs-TR-hhm" firstAttribute="top" secondItem="MY8-4U-isZ" secondAttribute="bottom" constant="15" id="mgx-TS-If4"/>
                 <constraint firstItem="FzO-7I-syL" firstAttribute="top" secondItem="MY8-4U-isZ" secondAttribute="bottom" constant="15" id="rCt-VM-djy"/>
                 <constraint firstItem="MY8-4U-isZ" firstAttribute="top" secondItem="WbC-nW-4CJ" secondAttribute="bottom" constant="31" id="t7i-ep-5dH"/>
             </constraints>
@@ -175,6 +186,9 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9L-aR-hd1">
                                     <rect key="frame" x="0.0" y="0.0" width="367" height="50"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="he3-hA-FpB"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <state key="normal" title="Select Your Ctiy">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -184,8 +198,11 @@
                                     </connections>
                                 </button>
                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gbr-tf-qKj">
-                                    <rect key="frame" x="0.0" y="-449" width="367" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="-449" width="367" height="50"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="1aJ-QV-pOa"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <state key="normal" title="Tel-Aviv">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -195,8 +212,11 @@
                                     </connections>
                                 </button>
                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60l-Dc-EDy">
-                                    <rect key="frame" x="0.0" y="-449" width="367" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="-449" width="367" height="50"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="8Bx-H6-7tJ"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <state key="normal" title="Jerusalem">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -227,6 +247,9 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bfz-Fe-een">
                                     <rect key="frame" x="0.0" y="0.0" width="367" height="50"/>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="rNW-mA-BEv"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <state key="normal" title="Select Your Program">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -316,7 +339,7 @@
                     </constraints>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.2853178193" blue="0.70213325780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="O7W-Q5-eKg" firstAttribute="trailing" secondItem="Vwn-aQ-uTB" secondAttribute="trailing" id="7Pn-qI-Qyf"/>
                 <constraint firstItem="O7W-Q5-eKg" firstAttribute="centerX" secondItem="zJ0-sk-Mj5" secondAttribute="centerX" id="O8d-wy-70D"/>
@@ -328,12 +351,12 @@
             <point key="canvasLocation" x="-310.5" y="157.5"/>
         </view>
         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-1" translatesAutoresizingMaskIntoConstraints="NO" id="6Lo-Wn-YEw">
-            <rect key="frame" x="0.0" y="0.0" width="132" height="128"/>
+            <rect key="frame" x="0.0" y="0.0" width="87" height="75"/>
             <constraints>
                 <constraint firstAttribute="height" constant="128" id="cKn-SM-lhx"/>
                 <constraint firstAttribute="width" constant="132" id="yyU-P5-bv6"/>
             </constraints>
-            <point key="canvasLocation" x="411" y="-316"/>
+            <point key="canvasLocation" x="137" y="-209"/>
         </imageView>
     </objects>
     <resources>
@@ -341,5 +364,6 @@
         <image name="codable" width="512" height="512"/>
         <image name="icon-1" width="1506" height="1500"/>
         <image name="iseeu" width="512" height="512"/>
+        <image name="logo" width="398" height="386"/>
     </resources>
 </document>
