--- a/DI-App/Controllers/ClassesVC/ClassesCell.xib
+++ b/DI-App/Controllers/ClassesVC/ClassesCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="156" id="KGk-i7-Jjw" customClass="ClassesCell" customModule="DI_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ClassesCell" rowHeight="156" id="KGk-i7-Jjw" customClass="ClassesCell" customModule="DI_App" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="156"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -21,44 +21,44 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ppB-vp-BFC">
-                        <rect key="frame" x="16" y="11" width="288" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="16" y="11" width="288" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHe-tT-CR5">
-                        <rect key="frame" x="16" y="40" width="288" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="16" y="49" width="288" height="24"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jE6-oo-rSI">
-                        <rect key="frame" x="16" y="69" width="288" height="76"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    </textView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bGJ-cv-pU4">
+                        <rect key="frame" x="16" y="81" width="288" height="64"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="jE6-oo-rSI" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="1fd-0u-rRi"/>
-                    <constraint firstItem="XHe-tT-CR5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="42B-ME-9ua"/>
-                    <constraint firstItem="jE6-oo-rSI" firstAttribute="top" secondItem="XHe-tT-CR5" secondAttribute="bottom" constant="8" id="4Og-jH-CuN"/>
-                    <constraint firstItem="ppB-vp-BFC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="94v-yh-ky3"/>
-                    <constraint firstItem="jE6-oo-rSI" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="DC0-Le-IC9"/>
-                    <constraint firstItem="XHe-tT-CR5" firstAttribute="top" secondItem="ppB-vp-BFC" secondAttribute="bottom" constant="8" id="FTe-G1-5xA"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="XHe-tT-CR5" secondAttribute="trailing" id="HVz-LN-kM0"/>
-                    <constraint firstItem="jE6-oo-rSI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Sch-Ac-4l1"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="ppB-vp-BFC" secondAttribute="trailing" id="UVi-IZ-fNW"/>
-                    <constraint firstItem="ppB-vp-BFC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="imK-X9-9vu"/>
+                    <constraint firstItem="bGJ-cv-pU4" firstAttribute="top" secondItem="XHe-tT-CR5" secondAttribute="bottom" constant="8" id="0pe-f7-vRp"/>
+                    <constraint firstItem="XHe-tT-CR5" firstAttribute="top" secondItem="ppB-vp-BFC" secondAttribute="bottom" constant="8" id="3Dh-6y-HTc"/>
+                    <constraint firstItem="bGJ-cv-pU4" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="3jq-jK-i6N"/>
+                    <constraint firstItem="XHe-tT-CR5" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="4Qz-qE-Ihf"/>
+                    <constraint firstItem="bGJ-cv-pU4" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="LqH-sm-RDE"/>
+                    <constraint firstItem="bGJ-cv-pU4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="bAN-Xb-eEM"/>
+                    <constraint firstItem="XHe-tT-CR5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="iKz-30-UPc"/>
+                    <constraint firstItem="ppB-vp-BFC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="qxR-UN-hii"/>
+                    <constraint firstItem="ppB-vp-BFC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="qxT-rd-rs2"/>
+                    <constraint firstItem="ppB-vp-BFC" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="s3w-dL-UcX"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="classDescription" destination="jE6-oo-rSI" id="2W6-us-esv"/>
+                <outlet property="coursesDescription" destination="bGJ-cv-pU4" id="6Qx-1k-EQf"/>
                 <outlet property="teacher" destination="XHe-tT-CR5" id="xyz-gx-gsA"/>
                 <outlet property="title" destination="ppB-vp-BFC" id="osk-UG-3uh"/>
             </connections>
-            <point key="canvasLocation" x="59" y="110"/>
+            <point key="canvasLocation" x="-121" y="41"/>
         </tableViewCell>
     </objects>
 </document>
