--- a/DI-App/Controllers/ProfileVC/ProfileVC.xib
+++ b/DI-App/Controllers/ProfileVC/ProfileVC.xib
@@ -20,6 +20,7 @@
                 <outlet property="profilePic" destination="DU5-rr-bt6" id="ujJ-3r-uWg"/>
                 <outlet property="sessionTxt" destination="alV-I8-Ivj" id="tsS-hG-snJ"/>
                 <outlet property="tapTheImage" destination="0tX-mP-sSP" id="l0P-cH-z8W"/>
+                <outlet property="uploadindicator" destination="j9S-3V-brp" id="8MX-u4-sgk"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -141,14 +142,22 @@
                         <constraint firstAttribute="trailing" secondItem="i3V-Bv-del" secondAttribute="trailing" id="sIp-rT-5yQ"/>
                     </constraints>
                 </stackView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="j9S-3V-brp">
+                    <rect key="frame" x="177" y="186" width="20" height="20"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="j9S-3V-brp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="177" id="3zB-rh-ify"/>
                 <constraint firstItem="DU5-rr-bt6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DzG-SJ-JUt"/>
+                <constraint firstItem="j9S-3V-brp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FR7-YL-hgm"/>
                 <constraint firstItem="sOI-DP-Gg1" firstAttribute="top" secondItem="DU5-rr-bt6" secondAttribute="bottom" constant="70" id="IaS-i4-0pX"/>
+                <constraint firstItem="sOI-DP-Gg1" firstAttribute="top" secondItem="j9S-3V-brp" secondAttribute="bottom" constant="30" id="X68-XQ-nPI"/>
                 <constraint firstItem="sOI-DP-Gg1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Xex-xI-JFb"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="j9S-3V-brp" secondAttribute="trailing" constant="178" id="YgI-x4-wp2"/>
                 <constraint firstItem="DU5-rr-bt6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="22" id="tlq-W7-jdR"/>
                 <constraint firstAttribute="trailing" secondItem="sOI-DP-Gg1" secondAttribute="trailing" constant="16" id="vVA-2L-pNW"/>
+                <constraint firstItem="j9S-3V-brp" firstAttribute="top" secondItem="DU5-rr-bt6" secondAttribute="bottom" constant="20" id="zdU-K0-aBA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="33.5" y="53.5"/>
