--- a/DI-App/Controllers/AssignmentsVC/AssignmentVC.xib
+++ b/DI-App/Controllers/AssignmentsVC/AssignmentVC.xib
@@ -20,8 +20,21 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coming Soon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2zM-br-Z6U">
+                    <rect key="frame" x="111.5" y="318.5" width="152" height="31.5"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="2zM-br-Z6U" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="5Ul-EN-a0i"/>
+                <constraint firstItem="2zM-br-Z6U" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="BNp-Bh-ySb"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="43.5" y="130.5"/>
         </view>
     </objects>
 </document>
