--- a/DI-App/Controllers/ProfileVC/ProfileVC.xib
+++ b/DI-App/Controllers/ProfileVC/ProfileVC.xib
@@ -20,7 +20,6 @@
                 <outlet property="profilePic" destination="DU5-rr-bt6" id="ujJ-3r-uWg"/>
                 <outlet property="sessionTxt" destination="alV-I8-Ivj" id="tsS-hG-snJ"/>
                 <outlet property="tapTheImage" destination="0tX-mP-sSP" id="l0P-cH-z8W"/>
-                <outlet property="uploadindicator" destination="j9S-3V-brp" id="8MX-u4-sgk"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,7 +28,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="instagram-icon3" translatesAutoresizingMaskIntoConstraints="NO" id="DU5-rr-bt6">
-                    <rect key="frame" x="125" y="42" width="124" height="124"/>
+                    <rect key="frame" x="124" y="91" width="124" height="124"/>
                     <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="124" id="BCq-DW-dbu"/>
@@ -38,8 +37,8 @@
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="124" id="s0J-4d-f6W"/>
                     </constraints>
                 </imageView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="sOI-DP-Gg1">
-                    <rect key="frame" x="16" y="236" width="343" height="330"/>
+                <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="sOI-DP-Gg1">
+                    <rect key="frame" x="16" y="285" width="343" height="330"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aPF-Dx-2uf">
                             <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
@@ -142,22 +141,28 @@
                         <constraint firstAttribute="trailing" secondItem="i3V-Bv-del" secondAttribute="trailing" id="sIp-rT-5yQ"/>
                     </constraints>
                 </stackView>
-                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="j9S-3V-brp">
-                    <rect key="frame" x="177" y="186" width="20" height="20"/>
-                </activityIndicatorView>
+                <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wa7-sG-gKg">
+                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <items>
+                        <navigationItem title="Title" id="mPP-vq-zZd">
+                            <barButtonItem key="leftBarButtonItem" title="Item" image="hamburger-icon" id="0bx-Mz-R8Y">
+                                <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="menu:" destination="-1" id="JGt-cQ-6Rs"/>
+                                </connections>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="j9S-3V-brp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="177" id="3zB-rh-ify"/>
-                <constraint firstItem="DU5-rr-bt6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DzG-SJ-JUt"/>
-                <constraint firstItem="j9S-3V-brp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FR7-YL-hgm"/>
+                <constraint firstItem="DU5-rr-bt6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="-1.5" id="DzG-SJ-JUt"/>
                 <constraint firstItem="sOI-DP-Gg1" firstAttribute="top" secondItem="DU5-rr-bt6" secondAttribute="bottom" constant="70" id="IaS-i4-0pX"/>
-                <constraint firstItem="sOI-DP-Gg1" firstAttribute="top" secondItem="j9S-3V-brp" secondAttribute="bottom" constant="30" id="X68-XQ-nPI"/>
                 <constraint firstItem="sOI-DP-Gg1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Xex-xI-JFb"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="j9S-3V-brp" secondAttribute="trailing" constant="178" id="YgI-x4-wp2"/>
-                <constraint firstItem="DU5-rr-bt6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="22" id="tlq-W7-jdR"/>
+                <constraint firstItem="DU5-rr-bt6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="71" id="tlq-W7-jdR"/>
                 <constraint firstAttribute="trailing" secondItem="sOI-DP-Gg1" secondAttribute="trailing" constant="16" id="vVA-2L-pNW"/>
-                <constraint firstItem="j9S-3V-brp" firstAttribute="top" secondItem="DU5-rr-bt6" secondAttribute="bottom" constant="20" id="zdU-K0-aBA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="33.5" y="53.5"/>
@@ -169,6 +174,7 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
+        <image name="hamburger-icon" width="50" height="50"/>
         <image name="instagram-icon3" width="2253" height="2253"/>
     </resources>
 </document>
